# ubuntu-touch-phone-opreating-system-learning-app

./: CMakeLists.txt  CertificateDialog.qml  CertificateManager.js  CourseContentPage.qml  CourseDelegate.qml  CourseDetailsDialog.qml  DownloadDialog.qml  LessonPage.qml  LoginPage.qml  Main.qml  OdooAPI.js  ProfilePage.qml  QuizPage.qml  README.md  ScorePage.qml  SettingsManager.js  SignupPage.qml  SyncDialog.qml  VideoDialog.qml  WelcomePage.qml  app.py  db.sqlite3  modle.py  qml.qrc
